tooling/nargo_cli/tests/snapshots/execution_failure/regression_7128/execute__tests__acir_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Assertion failed: soundness violation
   ┌─ src/main.nr:23:12
   │
23 │     assert(out0 != 0, "soundness violation");
   │            ---------
   │
   = Call stack:
     1. src/main.nr:23:12

Failed assertion
