tooling/nargo_cli/tests/snapshots/execution_failure/regression_7128/execute__tests__comptime_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: soundness violation
   ┌─ src/main.nr:23:12
   │
23 │     assert(out0 != 0, "soundness violation");
   │            --------- Assertion failed
   │
   = Call stack:
     1. src/main.nr:1:4

Error interpreting main function
