tooling/nargo_cli/tests/snapshots/execution_failure/regression_7128/execute__tests__force_brillig_false_inliner_0_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: Assertion failed: soundness violation
   ┌─ src/main.nr:23:12
   │
23 │     assert(out0 != 0, "soundness violation");
   │            ---------
   │
   = Call stack:
     1. src/main.nr:23:12

Failed assertion
